vlib/v/checker/tests/lock_const.out
vlib/v/checker/tests/lock_const.vv:7:8: error: `a` must be declared as `shared` variable to be locked
    5 | fn main() {
    6 |     mut c := 0
    7 |     rlock a {
      |           ^
    8 |         c = a
    9 |     }
