vlib/v/checker/tests/lock_const.vv
const (
	a = 5
)

fn main() {
	mut c := 0
	rlock a {
		c = a
	}
	println(c)
}
